--- a/css/styles.css
+++ b/css/styles.css
@@ -7,61 +7,55 @@ color-quinto: #ffffff;
 color-sexto: #0000ff,#ffff00;
 */
 
-/* 
-CONTENIDO DEL MAIN 
-*/
-.beneficios{
-    background-color: #000000;
-    color: #f0f8ff;
-}
-
-.Titulo-promo{
-    color: #ff6347;
-}
-
-.body{
-    background-image:url('../imagenes/fondo-web.jpg');
-    background-size: auto;
-}
-
-.titulo-cafeteria{
-    background-color:#ff8c00;
-    color:#ffffff;
-    border-radius: 10px;
-    text-align: center;
-}
-
 /*
 CONTENIDO DEL HEADER
 */
-.menu-cafe{
-    background-image:linear-gradient(#0000ff,#ffff00);
-    list-style-type: none;
-    text-align: center;
+.lista-nav {
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: space-evenly;
     align-items: stretch;
-    color:#ffffff;
-    padding: 8px;
-    margin: 30px;
-    border-radius: 15px;
+    list-style: none;
+    padding: 0;
+    gap: 10px;
+    
+}
+
+.lista-nav .item-nav {
+    text-align: center;
+    flex-grow: 1;
+}
+
+.lista-nav .item-nav a {
+    background-color: #000000;
+    text-decoration: none;
+    border-radius: 10px;
+    border: 3px solid blue;
+    display: block;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 800ms;
 }
 
 .lista-menu{
     padding: 4px;
 }
 
-.letras{
-    text-decoration: none;
-    color: #ffffff;
+
+.lista-nav .item-nav a:hover{
+    color:#5C008C;
 }
 
-.letras:hover{
-    color: crimson;
-}
-
-.articulo{
+/* 
+CONTENIDO DEL MAIN 
+*/
+.titulo-card-container{
+    background-color:#ff8c00;
+    color:#ffffff;
+    border-radius: 10px;
     text-align: center;
 }
 
@@ -72,30 +66,46 @@ TITULO DE LAS PROMOCIONES
     font-size: 30px;
     background-color: #ff8c00;
     text-align: center;
+    color: #f0f8ff;
+    border-radius: 10px;
 }
 
 /*
-FORMULARIO
+CSS PARA LAS CARDS
 */
-.fieldset{
-    background-color: #ff8c00;
+.card-container{
+    font-size: 18px;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: stretch;
 }
 
-.legend{
+.card{
+    background-color: #000000;
+    color: #f0f8ff;
     text-align: center;
-    background-color:#f0f8ff;
+    padding: 1em;
+    border: 3px solid blue;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
 }
 
-/*
-ANCHO PARA ELEMENTOS DEL FORMULARIO
-*/
-.elemento-form{
-    width: 200px; ;
+.titulo-card{
+    color: #ff6347;
 }
 
-.opcion-form{
-    width: 30px;
+.body-page{
+    background-image:url('../imagenes/fondo-web.jpg');
+    background-size: auto;
 }
+
 
 /*
 ELEMENTOS DEL FOOTER
@@ -107,8 +117,25 @@ ELEMENTOS DEL FOOTER
 }
 
 
-@media (min-width:992px){
-    .menu-cafe{
+@media (min-width:768px){
+    .lista-nav{
         flex-direction: row;
+    }
+    .card-container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }    
+}
+
+
+@media (min-width:992px){
+    .lista-nav{
+        flex-direction: row;
+    }
+    .card-container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .titulo-card-container {
+        grid-column: span 3;
     }
 }
