--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ CONTENIDO DEL HEADER
     padding: 10px;
     font-size: 20px;
     cursor: pointer;
-    transition: 800ms;
+    transition: all 400ms;
 }
 
 .lista-menu{
@@ -46,7 +46,9 @@ CONTENIDO DEL HEADER
 
 
 .lista-nav .item-nav a:hover{
-    color:#5C008C;
+    color:#ffd700;
+    box-shadow: 5px 5px 20px green;
+    transform: translateY(-3%)
 }
 
 /* 
@@ -89,21 +91,30 @@ CSS PARA LAS CARDS
     color: #f0f8ff;
     text-align: center;
     padding: 1em;
-    border: 3px solid blue;
+    border: 3px solid rgba(0, 255, 117, 0.30);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
+    cursor: pointer;
+    transition: all 400ms;
+}
+
+.card:hover{
+    box-shadow: 5px 5px 20px #ffd700;
+    transform: translateY(-3%);
 }
 
 .titulo-card{
     color: #ff6347;
 }
 
-.body-page{
+.body{
     background-image:url('../imagenes/fondo-web.jpg');
     background-size: auto;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -114,6 +125,73 @@ ELEMENTOS DEL FOOTER
     background-color: #f0f8ff;
     display: flex;
     flex-direction: column;
+    padding: 1em;
+}
+
+.footer-header{
+    padding: .5em;
+}
+
+.footer-header h3, 
+.footer-header p {
+margin: 0;
+}
+
+.footer-header h3 {
+font-size: 2em;
+margin-bottom: 0.2em;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.footer-header p {
+font-size: 1em;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.footer .footer-iconos-grandes img,
+ .footer-iconos-chicos img {
+    display: block;
+    width: 100%;
+    max-width: 100px;
+    margin: 0 auto;
+}
+
+.footer .footer-iconos-grandes{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+
+}
+
+.footer .icono-grande{
+    background-color: crimson;
+    padding: 1em;
+    text-align: center;
+}
+
+.footer .icono-grande a{
+    color: #000000;
+    text-decoration: none;
+}
+
+.footer .footer-iconos-chicos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    padding: 0 1.6em;
+}
+
+.footer .icono-chico img{
+    max-width: 30px;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    padding: .7em;
+}
+
+.footer .icono-chico a{
+    color: #000000;
+    text-decoration: none;
 }
 
 
@@ -137,5 +215,36 @@ ELEMENTOS DEL FOOTER
 
     .titulo-card-container {
         grid-column: span 3;
+    }
+
+    .footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 4em 0;
+    }
+
+    .footer-header{
+        align-self: flex-end;
+    }
+
+    .footer-iconos-grandes{
+        grid-row: span 2;
+    }
+
+    .footer .footer-iconos-chicos{
+        display: flex;
+        gap: 10px;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .footer .icono-chico img{
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .footer .icono-chico img{
+        width: 24px;
+        margin: 0;
     }
 }
