--- a/css/contacto.css
+++ b/css/contacto.css
@@ -165,6 +165,26 @@ border-radius: 10px;
     padding: 1em;
 }
 
+.footer-header{
+    padding: .5em;
+}
+
+.footer-header h3, 
+.footer-header p {
+margin: 0;
+}
+
+.footer-header h3 {
+font-size: 2em;
+margin-bottom: 0.2em;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.footer-header p {
+font-size: 1em;
+font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .footer .footer-iconos-grandes img,
  .footer-iconos-chicos img {
     display: block;
@@ -177,6 +197,7 @@ border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
+
 }
 
 .footer .icono-grande{
@@ -269,5 +290,37 @@ border-radius: 10px;
         display: flex;
         flex-direction: column;
         width: 100%;
+    }
+
+
+    .footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 4em 0;
+    }
+
+    .footer-header{
+        align-self: flex-end;
+    }
+
+    .footer-iconos-grandes{
+        grid-row: span 2;
+    }
+
+    .footer .footer-iconos-chicos{
+        display: flex;
+        gap: 10px;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .footer .icono-chico img{
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .footer .icono-chico img{
+        width: 24px;
+        margin: 0;
     }
 }
