--- a/css/menu.css
+++ b/css/menu.css
@@ -9,8 +9,30 @@ color-septimo: #f0f8ff;
 color-octavo: #ff0000;
 */
 
+/* INICIO BOTON WSP */
+
+.btn-wsp{
+position: fixed;
+width: 40px;
+bottom: 10px;
+right: 10px;
+background: #0df053;
+padding: 10px;
+border-radius: 2em;
+z-index: 999;
+}
+
+.btn-wsp:hover{
+    background-color: green;
+    cursor: pointer;
+    transition: all 300ms;
+    transform: translateY(-10%);
+}
+
+/* FIN BOTON WSP */
+
 /*
-CONTENIDO DEL HEADER
+INICIO DEL HEADER
 */
 .lista-nav {
     display: flex;
@@ -19,9 +41,8 @@ CONTENIDO DEL HEADER
     justify-content: space-evenly;
     align-items: stretch;
     list-style: none;
-    padding: 0;
     gap: 10px;
-    
+    padding: 4px;
 }
 
 .lista-nav .item-nav {
@@ -33,7 +54,6 @@ CONTENIDO DEL HEADER
     background-color: #000000;
     text-decoration: none;
     border-radius: 10px;
-    border: 3px solid blue;
     display: block;
     color: white;
     padding: 10px;
@@ -53,20 +73,53 @@ CONTENIDO DEL HEADER
     transform: translateY(-3%)
 }
 
+
 .titulo-menu{
-    background-color: #b8860b;
-    color: #f5f5dc;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;    
     padding: 3px;
-    border: 2px solid #000000;
     text-align: center;
+    font-size: 1.8em;
+}
+
+.container-cabecera{
+    background-color: #e9967a;
+}
+
+.cabecera{
+    display: flex;
+    justify-content: space-between;
+    margin: 0px;
+}
+
+.cabecera li{
+list-style: none;
+margin: 0;
+}
+
+.cabecera a{
+    text-decoration: none;
+    color: #f0f8ff;
 }
 
 
+.cabecera img{
+    width: 70px;
+    padding: 0;
+    margin: 0;
+}
+
+/* FIN DEL HEADER */
+
+
+/* INCIO DEL BODY */
 .body{
     background-image: url(../imagenes/fondo-web.jpg);
     margin: 0;
     padding: 0;
 }
+/* FIN DEL BODY */
+
 
 .titulo-card-container{
     background-color: #b8860b;
@@ -84,8 +137,9 @@ CONTENIDO DEL HEADER
     background-image: radial-gradient(red,violet,blue);
 }
 
+
 /*
-CSS PARA LAS CARDS
+INICIO DE LAS CARDS
 */
 .card-container-menu{
     font-size: 18px;
@@ -97,8 +151,6 @@ CSS PARA LAS CARDS
     justify-content: center;
     align-items: stretch;
 }
-
-
 
 .card-menu{
     background-color: #000000;
@@ -123,6 +175,79 @@ CSS PARA LAS CARDS
 .cafe{
     color: #ff6347;
 }
+/* FIN DE LAS CARDS */
+
+
+/* INICIO DE LAS CARDS PASTELERIA */
+.card-container-pasteleria{
+    font-size: 18px;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.card-pasteleria{
+    background-color: #000000;
+    color: #f0f8ff;
+    text-align: center;
+    padding: 1em;
+    border: 3px solid rgba(0, 255, 117, 0.30);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 400ms;
+}
+
+.card-pasteleria:hover{
+    box-shadow: 5px 5px 20px #ffd700;
+    transform: translateY(-3%);
+}
+
+/* FIN DE LAS CARDS PASTELERIA */
+
+
+
+/* INICIO DE LAS CARDS MERIENDA */
+.card-container-meriendas{
+    font-size: 18px;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: stretch;
+    
+}
+
+.card-merienda{
+    background-color: #000000;
+    color: #f0f8ff;
+    text-align: center;
+    padding: 1em;
+    border: 3px solid rgba(0, 255, 117, 0.30);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 400ms;
+}
+
+.card-merienda:hover{
+    box-shadow: 5px 5px 20px #ffd700;
+    transform: translateY(-3%);
+}
+
+/* FIN DE LAS CARDS MERIENDA */
 
 
 .info-promo{
@@ -134,6 +259,8 @@ CSS PARA LAS CARDS
     text-align: center;
 }
 
+
+/* INCIO DEL FOOTER */
 .footer{
     background-color: #f0f8ff;
     display: flex;
@@ -176,15 +303,27 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 
 }
 
-.footer .icono-grande{
-    background-color: crimson;
+.footer .icono-grande-1, .footer .icono-grande-2{
+    background-color: lightblue;
     padding: 1em;
     text-align: center;
 }
 
-.footer .icono-grande a{
+.footer .icono-grande-2 a, .footer .icono-grande-1 a{
     color: #000000;
     text-decoration: none;
+}
+
+.footer .icono-grande-1:hover, .footer .icono-grande-2:hover{
+    transform: translateY(-3%);
+    cursor: pointer;
+    transition: all 500ms;
+}
+
+.footer .icono-grande-1 img:hover, .footer .icono-grande-2 img:hover{
+    transform: translateY(-3%);
+    cursor: pointer;
+    transition: all 500ms;
 }
 
 .footer .footer-iconos-chicos{
@@ -202,9 +341,41 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     padding: .7em;
 }
 
+.icono-chico:hover{
+    cursor: pointer;
+    transition: all 500ms;
+    transform: translateY(-4%);
+}
+
 .footer .icono-chico a{
     color: #000000;
     text-decoration: none;
+}
+/* FIN DEL FOOTER */
+
+@media (min-width:768px){
+    .titulo-menu{
+        font-size: 2em;
+    }
+    
+        .cabecera{
+            justify-content: space-around;
+        }
+        
+    .cabecera img{
+        width: 70px;
+    }
+
+    .tamaño-taza{
+        text-align: center;
+    }
+
+    .tamaño-taza img{
+        padding: 0 1em ;
+        width: 70%;
+        height: 50%;
+    }
+
 }
 
 
@@ -212,10 +383,30 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     .lista-nav{
         flex-direction: row;
     }
+
+.titulo-menu{
+    font-size: 2.5em;
+}
+
+    .cabecera{
+        justify-content: space-around;
+    }
     
+.cabecera img{
+    width: 90px;
+}
+
     .card-container-menu{
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
+
+    .card-container-pasteleria{
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+
+.card-container-meriendas{
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 
     .titulo-card-container{
         grid-column: span 3;
