--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,12 @@ INICIO DE LAS CARDS
 /* FIN DEL BODY */
 
 
+.capu-tostado{
+    width: 70%;
+    align-self: center;
+}
+
+
 .label{
     background-color: #f0f8ff;
     font-size: 1em;
